--- a/cmd/server/resources/game.gohtml
+++ b/cmd/server/resources/game.gohtml
@@ -15,5 +15,9 @@
     </script>
     <title>Sokoban</title>
 </head>
-<body></body>
+<body>
+<div>
+    <h1>Token: {{.token}}</h1>
+</div>
+</body>
 </html>
