--- a/cmd/server/resources/game.gohtml
+++ b/cmd/server/resources/game.gohtml
@@ -8,7 +8,7 @@
             const go = new Go();
             WebAssembly.instantiateStreaming(fetch("client.wasm"), go.importObject).then((result) => {
                 go.run(result.instance);
-                result.instance.exports.access("{{.token}}");
+                token("{{.token}}");
             });
         } else {
             console.log("WebAssembly is not supported in your browser")
@@ -17,6 +17,7 @@
     <title>Sokoban</title>
 </head>
 <body>
-<canvas id="game_id" accesskey="{{.token}}"></canvas>
+<canvas id="game_id"></canvas>
+<div id="status"></div>
 </body>
 </html>
